# madr-mongo

./: Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yaml
migrations/: env.py
migrations/versions/: 541f1d3439b4_create_users_authors_and_books_tables.py  b8bce41e5af5_create_users_table.py
src/madr/: app.py  database.py  security.py  settings.py
src/madr/auth/: repository.py  routes.py  service.py
src/madr/authors/: models.py  repository.py  routes.py  schemas.py  service.py
src/madr/books/: models.py  repository.py  routes.py  schemas.py  service.py
src/madr/core/: exceptions.py
src/madr/shared/: schema.py
src/madr/users/: models.py  repository.py  routes.py  schemas.py  service.py
src/madr/utils/: sanitize.py
tests/: conftest.py  test_app.py  test_database.py  test_security.py
tests/auth/: test_auth.py
tests/authors/: test_authors.py
tests/books/: test_books.py
tests/users/: test_users.py  test_users_db.py
tests/utils/: test_sanitize.py
